--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
+  
 
   <title>Cryptocurrency</title>
 </head>
@@ -202,7 +203,410 @@
     <div class="form">
       <form action="#" class="form__form">
         <div class="form__convert">
-          <div class="select">
+          
+<details class="custom-select">
+  <summary class="radios">
+    <input type="radio" name="item" id="default" title="Выберите валюту" checked>
+    <input type="radio" name="item" id="item1-1" title="Bitcoin BTC">
+    <input type="radio" name="item" id="item1-2" title="Ethereum ETH">
+    <input type="radio" name="item" id="item1-3" title="Tether USDT">
+    <input type="radio" name="item" id="item1-4" title="EOS EOS">
+    <input type="radio" name="item" id="item1-5" title="Litecoin LTC">
+    <input type="radio" name="item" id="item1-6" title="Monero XMR">
+    <input type="radio" name="item" id="item1-7" title="NEO NEO">
+    <input type="radio" name="item" id="item1-8" title="Ripple XRP">
+    <input type="radio" name="item" id="item1-9" title="Stellarlumens XLM">
+    <input type="radio" name="item" id="item1-10" title="Zcash ZEC">
+    <input type="radio" name="item" id="item1-11" title="Advanced Cash USD">
+    <input type="radio" name="item" id="item1-12" title="EXMO code RUB">
+    <input type="radio" name="item" id="item1-13" title="EXMO code USD">
+    <input type="radio" name="item" id="item1-14" title="QIWI RUB">
+    <input type="radio" name="item" id="item1-15" title="Payeer RUB">
+    <input type="radio" name="item" id="item1-16" title="Perfect Money USD">
+    <input type="radio" name="item" id="item1-17" title="Сбербанк RUB">
+    <input type="radio" name="item" id="item1-18" title="ТКС QR-код RUB">
+    <input type="radio" name="item" id="item1-19" title="Тинькофф Онлайн RUB">
+    <input type="radio" name="item" id="item1-20" title="Наличные RUB">
+    <input type="radio" name="item" id="item1-21" title="Наличные USD">
+    <input type="radio" name="item" id="item1-22" title="Наличные EUR">
+    <input type="radio" name="item" id="item1-23" title="Наличные Европа EUR">
+    <input type="radio" name="item" id="item1-24" title="Western Union USD">
+
+  </summary>
+  <ul class="list">
+    <li>
+      <label for="item1-1">
+        <img src="images/btc.ico" alt="btc" class="currency__icon">
+        <p class="currency__text">Bitcoin BTC</p>
+        <span></span>
+      </label>
+    </li>
+    <li>
+      <label for="item1-2">
+        <img src="images/eth.png" alt="eth" class="currency__icon">
+        <p class="currency__text">Ethereum</p>
+        <p class="currency__code">ETH</p></label>
+    </li>
+    <li>
+      <label for="item1-3">
+        <img src="images/usdt.png" alt="usdt" class="currency__icon">
+            <p class="currency__text">Tether</p>
+            <p class="currency__code">USDT</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-4">
+        <img src="images/eos.png" alt="eos" class="currency__icon">
+        <p class="currency__text">EOS</p>
+        <p class="currency__code">EOS</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-5">
+        <img src="images/ltc.png" alt="ltc" class="currency__icon">
+        <p class="currency__text">Litecoin</p>
+        <p class="currency__code">LTC</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-6">
+        <img src="images/xmr.svg" alt="xmr" class="currency__icon">
+            <p class="currency__text">Monero</p>
+            <p class="currency__code">XMR</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-7">
+        <img src="images/neo.png" alt="neo" class="currency__icon">
+            <p class="currency__text">NEO</p>
+            <p class="currency__code">NEO</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-8">
+        <img src="images/xrp.png" alt="xrp" class="currency__icon">
+            <p class="currency__text">Ripple</p>
+            <p class="currency__code">XRP</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-9">
+        <img src="images/xlm.png" alt="xlm" class="currency__icon">
+            <p class="currency__text">Stellarlumens</p>
+            <p class="currency__code">XLM</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-10">
+        <img src="images/zec.jpeg" alt="zec" class="currency__icon">
+            <p class="currency__text">Zcash</p>
+            <p class="currency__code">ZEC</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-11">
+        <img src="images/ac.png" alt="ac" class="currency__icon">
+            <p class="currency__text">Advanced Cash</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-12">
+        <img src="images/exmo.png" alt="exmorub" class="currency__icon">
+            <p class="currency__text">EXMO code</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-13">
+        <img src="images/exmo.png" alt="exmousd" class="currency__icon">
+            <p class="currency__text">EXMO code</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-14">
+        <img src="images/qiwi.png" alt="qiwi" class="currency__icon">
+            <p class="currency__text">QIWI</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-15">
+        <img src="images/payeer.png" alt="payeer" class="currency__icon">
+            <p class="currency__text">Payeer</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-16">
+        <img src="images/pm.png" alt="pm" class="currency__icon">
+            <p class="currency__text">Perfect Money</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-17">
+        <img src="images/sber.jpeg" alt="sber" class="currency__icon">
+            <p class="currency__text">Сбербанк</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-18">
+        <img src="images/tinkoff.png" alt="tks" class="currency__icon">
+            <p class="currency__text">ТКС QR-код</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-19">
+        <img src="images/tinkoff.png" alt="tinkoff" class="currency__icon">
+            <p class="currency__text">Тинькофф Онлайн</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-20">
+        <img src="images/money.png" alt="mrub" class="currency__icon">
+            <p class="currency__text">Наличные</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-21">
+        <img src="images/money.png" alt="musd" class="currency__icon">
+            <p class="currency__text">Наличные</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-22">
+        <img src="images/money.png" alt="meur" class="currency__icon">
+            <p class="currency__text">Наличные</p>
+            <p class="currency__code">EUR</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-23">
+        <img src="images/money.png" alt="me" class="currency__icon">
+            <p class="currency__text">Наличные Европа</p>
+            <p class="currency__code">EUR</p>
+      </label>
+    </li>
+    <li>
+      <label for="item1-24">
+        <img src="images/wu.png" alt="wu" class="currency__icon">
+            <p class="currency__text">Western Union</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+  </ul>
+</details>
+<p class="form__equel">=</p>
+<details class="custom-select">
+  <summary class="radios">
+    <input type="radio" name="item2" id="default2" title="Выберите валюту" checked>
+    <input type="radio" name="item2" id="item2-1" title="Bitcoin BTC">
+    <input type="radio" name="item2" id="item2-2" title="Ethereum ETH">
+    <input type="radio" name="item2" id="item2-3" title="Tether USDT">
+    <input type="radio" name="item2" id="item2-4" title="EOS EOS">
+    <input type="radio" name="item2" id="item2-5" title="Litecoin LTC">
+    <input type="radio" name="item2" id="item2-6" title="Monero XMR">
+    <input type="radio" name="item2" id="item2-7" title="NEO NEO">
+    <input type="radio" name="item2" id="item2-8" title="Ripple XRP">
+    <input type="radio" name="item2" id="item2-9" title="Stellarlumens XLM">
+    <input type="radio" name="item2" id="item2-10" title="Zcash ZEC">
+    <input type="radio" name="item2" id="item2-11" title="Advanced Cash USD">
+    <input type="radio" name="item2" id="item2-12" title="EXMO code RUB">
+    <input type="radio" name="item2" id="item2-13" title="EXMO code USD">
+    <input type="radio" name="item2" id="item2-14" title="QIWI RUB">
+    <input type="radio" name="item2" id="item2-15" title="Payeer RUB">
+    <input type="radio" name="item2" id="item2-16" title="Perfect Money USD">
+    <input type="radio" name="item2" id="item2-17" title="Сбербанк RUB">
+    <input type="radio" name="item2" id="item2-18" title="ТКС QR-код RUB">
+    <input type="radio" name="item2" id="item2-19" title="Тинькофф Онлайн RUB">
+    <input type="radio" name="item2" id="item2-20" title="Наличные RUB">
+    <input type="radio" name="item2" id="item2-21" title="Наличные USD">
+    <input type="radio" name="item2" id="item2-22" title="Наличные EUR">
+    <input type="radio" name="item2" id="item2-23" title="Наличные Европа EUR">
+    <input type="radio" name="item2" id="item2-24" title="Western Union USD">
+
+  </summary>
+  <ul class="list-right">
+    <li>
+      <label for="item2-1">
+        <img src="images/btc.ico" alt="btc" class="currency__icon">
+        <p class="currency__text">Bitcoin BTC</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-2">
+        <img src="images/eth.png" alt="eth" class="currency__icon">
+        <p class="currency__text">Ethereum</p>
+        <p class="currency__code">ETH</p></label>
+    </li>
+    <li>
+      <label for="item2-3">
+        <img src="images/usdt.png" alt="usdt" class="currency__icon">
+            <p class="currency__text">Tether</p>
+            <p class="currency__code">USDT</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-4">
+        <img src="images/eos.png" alt="eos" class="currency__icon">
+        <p class="currency__text">EOS</p>
+        <p class="currency__code">EOS</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-5">
+        <img src="images/ltc.png" alt="ltc" class="currency__icon">
+        <p class="currency__text">Litecoin</p>
+        <p class="currency__code">LTC</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-6">
+        <img src="images/xmr.svg" alt="xmr" class="currency__icon">
+            <p class="currency__text">Monero</p>
+            <p class="currency__code">XMR</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-7">
+        <img src="images/neo.png" alt="neo" class="currency__icon">
+            <p class="currency__text">NEO</p>
+            <p class="currency__code">NEO</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-8">
+        <img src="images/xrp.png" alt="xrp" class="currency__icon">
+            <p class="currency__text">Ripple</p>
+            <p class="currency__code">XRP</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-9">
+        <img src="images/xlm.png" alt="xlm" class="currency__icon">
+            <p class="currency__text">Stellarlumens</p>
+            <p class="currency__code">XLM</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-10">
+        <img src="images/zec.jpeg" alt="zec" class="currency__icon">
+            <p class="currency__text">Zcash</p>
+            <p class="currency__code">ZEC</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-11">
+        <img src="images/ac.png" alt="ac" class="currency__icon">
+            <p class="currency__text">Advanced Cash</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-12">
+        <img src="images/exmo.png" alt="exmorub" class="currency__icon">
+            <p class="currency__text">EXMO code</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-13">
+        <img src="images/exmo.png" alt="exmousd" class="currency__icon">
+            <p class="currency__text">EXMO code</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-14">
+        <img src="images/qiwi.png" alt="qiwi" class="currency__icon">
+            <p class="currency__text">QIWI</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-15">
+        <img src="images/payeer.png" alt="payeer" class="currency__icon">
+            <p class="currency__text">Payeer</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-16">
+        <img src="images/pm.png" alt="pm" class="currency__icon">
+            <p class="currency__text">Perfect Money</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-17">
+        <img src="images/sber.jpeg" alt="sber" class="currency__icon">
+            <p class="currency__text">Сбербанк</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-18">
+        <img src="images/tinkoff.png" alt="tks" class="currency__icon">
+            <p class="currency__text">ТКС QR-код</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-19">
+        <img src="images/tinkoff.png" alt="tinkoff" class="currency__icon">
+            <p class="currency__text">Тинькофф Онлайн</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-20">
+        <img src="images/money.png" alt="mrub" class="currency__icon">
+            <p class="currency__text">Наличные</p>
+            <p class="currency__code">RUB</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-21">
+        <img src="images/money.png" alt="musd" class="currency__icon">
+            <p class="currency__text">Наличные</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-22">
+        <img src="images/money.png" alt="meur" class="currency__icon">
+            <p class="currency__text">Наличные</p>
+            <p class="currency__code">EUR</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-23">
+        <img src="images/money.png" alt="me" class="currency__icon">
+            <p class="currency__text">Наличные Европа</p>
+            <p class="currency__code">EUR</p>
+      </label>
+    </li>
+    <li>
+      <label for="item2-24">
+        <img src="images/wu.png" alt="wu" class="currency__icon">
+            <p class="currency__text">Western Union</p>
+            <p class="currency__code">USD</p>
+      </label>
+    </li>
+  </ul>
+</details>
+
+
+
+
+          <!-- <div class="select">
             <select name="buy" id="buy">
               <option value="Bitcoin BTC">Bitcoin BTC</option>
               <option value="Ethereum ETH">Ethereum ETH</option>
@@ -258,7 +662,7 @@
               <option value="Наличные Европа EUR">Наличные Европа EUR</option>
               <option value="Western Union USD">Western Union USD</option>
             </select>
-          </div>
+          </div> -->
         
         </div>
 
@@ -551,5 +955,7 @@
       <img src="./images//chat-icon.png" alt="chat" class="chat__img">
     </div>
   </footer>
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
